crates/ast/tests/snapshots/ast__class_block_annotation.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstClassBlock {
        variables: [],
        methods: [],
        constructors: [],
        static_blocks: [],
        inner: [
            Annotation(
                AstAnnotation {
                    range: AstRange {
                        start: AstPoint { 1:4 },
                        end: AstPoint { 4:5 },
                    },
                    availability: AstAvailability(
                        0x0,
                    ),
                    attributes: AstThingAttributes(
                        0x0,
                    ),
                    annotated: [
                        AstAnnotated {
                            range: AstRange {
                                start: AstPoint { 1:4 },
                                end: AstPoint { 1:31 },
                            },
                            name: AstIdentifier {
                                range: AstRange {
                                    start: AstPoint { 1:5 },
                                    end: AstPoint { 1:11 },
                                },
                                value: "Target",
                            },
                            parameters: Parameter(
                                [
                                    Expression(
                                        [
                                            Base(
                                                AstBaseExpression {
                                                    range: AstRange {
                                                        start: AstPoint { 1:12 },
                                                        end: AstPoint { 1:23 },
                                                    },
                                                    ident: Some(
                                                        Identifier(
                                                            AstIdentifier {
                                                                range: AstRange {
                                                                    start: AstPoint { 1:12 },
                                                                    end: AstPoint { 1:23 },
                                                                },
                                                                value: "ElementType",
                                                            },
                                                        ),
                                                    ),
                                                    values: None,
                                                    operator: None,
                                                },
                                            ),
                                            Base(
                                                AstBaseExpression {
                                                    range: AstRange {
                                                        start: AstPoint { 1:23 },
                                                        end: AstPoint { 1:24 },
                                                    },
                                                    ident: None,
                                                    values: None,
                                                    operator: Dot(
                                                        AstRange {
                                                            start: AstPoint { 1:23 },
                                                            end: AstPoint { 1:24 },
                                                        },
                                                    ),
                                                },
                                            ),
                                            Base(
                                                AstBaseExpression {
                                                    range: AstRange {
                                                        start: AstPoint { 1:24 },
                                                        end: AstPoint { 1:30 },
                                                    },
                                                    ident: Some(
                                                        Identifier(
                                                            AstIdentifier {
                                                                range: AstRange {
                                                                    start: AstPoint { 1:24 },
                                                                    end: AstPoint { 1:30 },
                                                                },
                                                                value: "METHOD",
                                                            },
                                                        ),
                                                    ),
                                                    values: None,
                                                    operator: None,
                                                },
                                            ),
                                        ],
                                    ),
                                ],
                            ),
                        },
                        AstAnnotated {
                            range: AstRange {
                                start: AstPoint { 2:4 },
                                end: AstPoint { 2:39 },
                            },
                            name: AstIdentifier {
                                range: AstRange {
                                    start: AstPoint { 2:5 },
                                    end: AstPoint { 2:14 },
                                },
                                value: "Retention",
                            },
                            parameters: Parameter(
                                [
                                    Expression(
                                        [
                                            Base(
                                                AstBaseExpression {
                                                    range: AstRange {
                                                        start: AstPoint { 2:15 },
                                                        end: AstPoint { 2:30 },
                                                    },
                                                    ident: Some(
                                                        Identifier(
                                                            AstIdentifier {
                                                                range: AstRange {
                                                                    start: AstPoint { 2:15 },
                                                                    end: AstPoint { 2:30 },
                                                                },
                                                                value: "RetentionPolicy",
                                                            },
                                                        ),
                                                    ),
                                                    values: None,
                                                    operator: None,
                                                },
                                            ),
                                            Base(
                                                AstBaseExpression {
                                                    range: AstRange {
                                                        start: AstPoint { 2:30 },
                                                        end: AstPoint { 2:31 },
                                                    },
                                                    ident: None,
                                                    values: None,
                                                    operator: Dot(
                                                        AstRange {
                                                            start: AstPoint { 2:30 },
                                                            end: AstPoint { 2:31 },
                                                        },
                                                    ),
                                                },
                                            ),
                                            Base(
                                                AstBaseExpression {
                                                    range: AstRange {
                                                        start: AstPoint { 2:31 },
                                                        end: AstPoint { 2:38 },
                                                    },
                                                    ident: Some(
                                                        Identifier(
                                                            AstIdentifier {
                                                                range: AstRange {
                                                                    start: AstPoint { 2:31 },
                                                                    end: AstPoint { 2:38 },
                                                                },
                                                                value: "RUNTIME",
                                                            },
                                                        ),
                                                    ),
                                                    values: None,
                                                    operator: None,
                                                },
                                            ),
                                        ],
                                    ),
                                ],
                            ),
                        },
                    ],
                    name: AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 3:14 },
                            end: AstPoint { 3:22 },
                        },
                        value: "Compiled",
                    },
                    fields: [],
                    inner: [],
                },
            ),
        ],
        blocks: [],
    },
    20,
)
