crates/ast/tests/snapshots/ast__class_colon_colon_new.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    [
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:0 },
                    end: AstPoint { 0:5 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:0 },
                                end: AstPoint { 0:5 },
                            },
                            value: "Class",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Generics(
            AstGenerics {
                range: AstRange {
                    start: AstPoint { 0:5 },
                    end: AstPoint { 0:8 },
                },
                jtypes: [
                    AstJType {
                        annotated: [],
                        range: AstRange {
                            start: AstPoint { 0:6 },
                            end: AstPoint { 0:8 },
                        },
                        value: Wildcard,
                    },
                ],
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:8 },
                    end: AstPoint { 0:10 },
                },
                ident: Some(
                    EmptyArrayAccess,
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:10 },
                    end: AstPoint { 0:12 },
                },
                ident: None,
                values: None,
                operator: ColonColon(
                    AstRange {
                        start: AstPoint { 0:10 },
                        end: AstPoint { 0:10 },
                    },
                ),
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:12 },
                    end: AstPoint { 0:15 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:12 },
                                end: AstPoint { 0:15 },
                            },
                            value: "new",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
    ],
    9,
)
