crates/ast/tests/snapshots/ast__class_var_hashmap_genirics.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    [
        AstClassVariable {
            range: AstRange {
                start: AstPoint { 0:0 },
                end: AstPoint { 0:75 },
            },
            availability: AstAvailability(
                Private,
            ),
            annotated: [],
            name: AstIdentifier {
                range: AstRange {
                    start: AstPoint { 0:50 },
                    end: AstPoint { 0:57 },
                },
                value: "pdStore",
            },
            jtype: AstJType {
                annotated: [],
                range: AstRange {
                    start: AstPoint { 0:8 },
                    end: AstPoint { 0:49 },
                },
                value: Generic(
                    AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:8 },
                            end: AstPoint { 0:15 },
                        },
                        value: "HashMap",
                    },
                    [
                        AstJType {
                            annotated: [],
                            range: AstRange {
                                start: AstPoint { 0:16 },
                                end: AstPoint { 0:22 },
                            },
                            value: Class(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint { 0:16 },
                                        end: AstPoint { 0:22 },
                                    },
                                    value: "String",
                                },
                            ),
                        },
                        AstJType {
                            annotated: [],
                            range: AstRange {
                                start: AstPoint { 0:24 },
                                end: AstPoint { 0:48 },
                            },
                            value: Generic(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint { 0:24 },
                                        end: AstPoint { 0:28 },
                                    },
                                    value: "List",
                                },
                                [
                                    AstJType {
                                        annotated: [],
                                        range: AstRange {
                                            start: AstPoint { 0:29 },
                                            end: AstPoint { 0:47 },
                                        },
                                        value: Class(
                                            AstIdentifier {
                                                range: AstRange {
                                                    start: AstPoint { 0:29 },
                                                    end: AstPoint { 0:47 },
                                                },
                                                value: "PropertyDescriptor",
                                            },
                                        ),
                                    },
                                ],
                            ),
                        },
                    ],
                ),
            },
            expression: Some(
                [
                    NewClass(
                        AstNewClass {
                            range: AstRange {
                                start: AstPoint { 0:60 },
                                end: AstPoint { 0:75 },
                            },
                            jtype: AstJType {
                                annotated: [],
                                range: AstRange {
                                    start: AstPoint { 0:64 },
                                    end: AstPoint { 0:73 },
                                },
                                value: Generic(
                                    AstIdentifier {
                                        range: AstRange {
                                            start: AstPoint { 0:64 },
                                            end: AstPoint { 0:71 },
                                        },
                                        value: "HashMap",
                                    },
                                    [],
                                ),
                            },
                            rhs: Parameters(
                                AstRange {
                                    start: AstPoint { 0:72 },
                                    end: AstPoint { 0:75 },
                                },
                                [],
                            ),
                        },
                    ),
                ],
            ),
            volatile_transient: AstVolatileTransient(
                0x0,
            ),
        },
    ],
    19,
)
