crates/ast/tests/snapshots/ast__colon_colon_new.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    [
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:0 },
                    end: AstPoint { 0:4 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:0 },
                                end: AstPoint { 0:4 },
                            },
                            value: "byte",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:4 },
                    end: AstPoint { 0:6 },
                },
                ident: Some(
                    EmptyArrayAccess(
                        AstRange {
                            start: AstPoint { 0:4 },
                            end: AstPoint { 0:6 },
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
    ],
    3,
)
