crates/ast/tests/snapshots/ast__complicated_type.snap
---
source: crates/ast/tests/ast.rs
expression: parsed
---
(
    AstJType {
        annotated: [
            AstAnnotated {
                range: AstRange {
                    start: AstPoint { 0:20 },
                    end: AstPoint { 0:28 },
                },
                name: AstIdentifier {
                    range: AstRange {
                        start: AstPoint { 0:21 },
                        end: AstPoint { 0:28 },
                    },
                    value: "NotNull",
                },
                parameters: None,
            },
        ],
        range: AstRange {
            start: AstPoint { 0:0 },
            end: AstPoint { 0:73 },
        },
        value: Access {
            base: AstJType {
                annotated: [],
                range: AstRange {
                    start: AstPoint { 0:0 },
                    end: AstPoint { 0:19 },
                },
                value: Class(
                    AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:0 },
                            end: AstPoint { 0:19 },
                        },
                        value: "CustomPacketPayload",
                    },
                ),
            },
            inner: AstJType {
                annotated: [],
                range: AstRange {
                    start: AstPoint { 0:29 },
                    end: AstPoint { 0:73 },
                },
                value: Generic(
                    AstIdentifier {
                        range: AstRange {
                            start: AstPoint { 0:29 },
                            end: AstPoint { 0:33 },
                        },
                        value: "Type",
                    },
                    [
                        AstJType {
                            annotated: [],
                            range: AstRange {
                                start: AstPoint { 0:34 },
                                end: AstPoint { 0:45 },
                            },
                            value: Wildcard,
                        },
                        AstJType {
                            annotated: [
                                AstAnnotated {
                                    range: AstRange {
                                        start: AstPoint { 0:44 },
                                        end: AstPoint { 0:52 },
                                    },
                                    name: AstIdentifier {
                                        range: AstRange {
                                            start: AstPoint { 0:45 },
                                            end: AstPoint { 0:52 },
                                        },
                                        value: "NotNull",
                                    },
                                    parameters: None,
                                },
                            ],
                            range: AstRange {
                                start: AstPoint { 0:44 },
                                end: AstPoint { 0:72 },
                            },
                            value: Class(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint { 0:53 },
                                        end: AstPoint { 0:72 },
                                    },
                                    value: "CustomPacketPayload",
                                },
                            ),
                        },
                    ],
                ),
            },
        },
    },
    12,
)
