crates/ast/tests/snapshots/ast__double_plus.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    [
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:0 },
                    end: AstPoint { 0:6 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:0 },
                                end: AstPoint { 0:6 },
                            },
                            value: "values",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:6 },
                    end: AstPoint { 0:11 },
                },
                ident: Some(
                    ArrayAccess {
                        expr: [
                            Base(
                                AstBaseExpression {
                                    range: AstRange {
                                        start: AstPoint { 0:7 },
                                        end: AstPoint { 0:8 },
                                    },
                                    ident: Some(
                                        Identifier(
                                            AstIdentifier {
                                                range: AstRange {
                                                    start: AstPoint { 0:7 },
                                                    end: AstPoint { 0:8 },
                                                },
                                                value: "i",
                                            },
                                        ),
                                    ),
                                    values: None,
                                    operator: None,
                                },
                            ),
                            Base(
                                AstBaseExpression {
                                    range: AstRange {
                                        start: AstPoint { 0:8 },
                                        end: AstPoint { 0:10 },
                                    },
                                    ident: None,
                                    values: None,
                                    operator: PlusPlus(
                                        AstRange {
                                            start: AstPoint { 0:8 },
                                            end: AstPoint { 0:8 },
                                        },
                                    ),
                                },
                            ),
                        ],
                        range: AstRange {
                            start: AstPoint { 0:6 },
                            end: AstPoint { 0:11 },
                        },
                    },
                ),
                values: None,
                operator: None,
            },
        ),
    ],
    6,
)
