crates/ast/tests/snapshots/ast__equal_expr.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    [
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:0 },
                    end: AstPoint { 0:1 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:0 },
                                end: AstPoint { 0:1 },
                            },
                            value: "a",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:2 },
                    end: AstPoint { 0:4 },
                },
                ident: None,
                values: None,
                operator: Equal(
                    AstRange {
                        start: AstPoint { 0:2 },
                        end: AstPoint { 0:4 },
                    },
                ),
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:5 },
                    end: AstPoint { 0:6 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:5 },
                                end: AstPoint { 0:6 },
                            },
                            value: "b",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
    ],
    3,
)
