crates/ast/tests/snapshots/ast__equasion_method_call.snap
---
source: crates/ast/tests/ast.rs
expression: parsed.unwrap()
---
(
    [
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:2 },
                    end: AstPoint { 0:3 },
                },
                ident: Some(
                    Value(
                        Nuget(
                            StringLiteral(
                                AstIdentifier {
                                    range: AstRange {
                                        start: AstPoint { 0:2 },
                                        end: AstPoint { 0:3 },
                                    },
                                    value: "z",
                                },
                            ),
                        ),
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:4 },
                    end: AstPoint { 0:5 },
                },
                ident: None,
                values: None,
                operator: Plus(
                    AstRange {
                        start: AstPoint { 0:4 },
                        end: AstPoint { 0:5 },
                    },
                ),
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:6 },
                    end: AstPoint { 0:7 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:6 },
                                end: AstPoint { 0:7 },
                            },
                            value: "a",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:7 },
                    end: AstPoint { 0:8 },
                },
                ident: None,
                values: None,
                operator: Dot(
                    AstRange {
                        start: AstPoint { 0:7 },
                        end: AstPoint { 0:8 },
                    },
                ),
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:8 },
                    end: AstPoint { 0:16 },
                },
                ident: Some(
                    Identifier(
                        AstIdentifier {
                            range: AstRange {
                                start: AstPoint { 0:8 },
                                end: AstPoint { 0:16 },
                            },
                            value: "getThing",
                        },
                    ),
                ),
                values: None,
                operator: None,
            },
        ),
        Base(
            AstBaseExpression {
                range: AstRange {
                    start: AstPoint { 0:16 },
                    end: AstPoint { 0:18 },
                },
                ident: None,
                values: Some(
                    AstValues {
                        range: AstRange {
                            start: AstPoint { 0:16 },
                            end: AstPoint { 0:18 },
                        },
                        values: [],
                    },
                ),
                operator: None,
            },
        ),
    ],
    7,
)
